@@ -55,6 +55,7 @@ Example
 
 from .nfoldcrossvalidation import nfoldcrossvalidation
 from .supervised.defaultclassifier import defaultclassifier
+from .supervised.defaultlearner import defaultlearner
 from .unsupervised.kmeans import kmeans
 from milk_version import __version__
 
@@ -62,5 +63,6 @@ __all__ = [
     '__version__',
     'kmeans',
     'defaultclassifier',
+    'defaultlearner',
     'nfoldcrossvalidation',
     ]
