@@ -6,6 +6,7 @@ Version 0.3.9+
 	* Add histogram & normali(z|s)e options to ``milk.kmeans.assign_centroid``
 	* Fix bug in sda when features were constant for a class
 	* Add select_best_kmeans
+	* Added defaultlearner as a better name than defaultclassifier
 
 Version 0.3.9 2011-03-15 by luispedro
 	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
